--- a/hi2/pom.xml
+++ b/hi2/pom.xml
@@ -3,4 +3,24 @@
   <groupId>tw.brad</groupId>
   <artifactId>hi2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+	<properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        
+		<dependency>
+		    <groupId>org.hibernate.orm</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>6.6.0.Final</version>
+		</dependency>
+                    
+    </dependencies>	
+    
 </project>
